# ai_scaffolding

cookiecutter-dnai/: README.md  (+2 more)
cookiecutter-dnai/{{cookiecutter.project_slug}}/: .env.example  LICENSE  Makefile  README.md  pyproject.toml
cookiecutter-dnai/{{cookiecutter.project_slug}}/.github/workflows/: cd.yml  ci.yml
cookiecutter-dnai/{{cookiecutter.project_slug}}/cli/: dnai.py  one.py
cookiecutter-dnai/{{cookiecutter.project_slug}}/config/: data_model.yaml  eval.yaml  purview.yaml  routes.yaml  settings.yaml
cookiecutter-dnai/{{cookiecutter.project_slug}}/dashboards/powerbi/: README.md
cookiecutter-dnai/{{cookiecutter.project_slug}}/infra/aws/: sam-template.yaml
cookiecutter-dnai/{{cookiecutter.project_slug}}/scripts/: {{cookiecutter.script_name}}.py
cookiecutter-dnai/{{cookiecutter.project_slug}}/src/app/: __init__.py
cookiecutter-dnai/{{cookiecutter.project_slug}}/src/app/api/: auth.py  handlers.py  openapi.yaml
cookiecutter-dnai/{{cookiecutter.project_slug}}/src/app/checklists/: rules_engine.py
cookiecutter-dnai/{{cookiecutter.project_slug}}/tests/eval/: test_eval_classify.py
cookiecutter-dnai/{{cookiecutter.project_slug}}/ui/angular/: README.md
cookiecutter-dnai/{{cookiecutter.project_slug}}/ui/node/: package.json  server.js
cookiecutter-dnai/{{cookiecutter.project_slug}}/ui/react/: .gitignore  README.md  brand.css  index.html  package.json
cookiecutter-dnai/{{cookiecutter.project_slug}}/ui/streamlit/: app.py  theme.css
cookiecutter-dnai/{{cookiecutter.project_slug}}/ui/web/: brand.css  config.js  index.html  main.js  styles.css
(+123 files in other folders)
